remove redundant value assignments